--- a/css/theme_dark.css
+++ b/css/theme_dark.css
@@ -24,7 +24,122 @@
     }
 }
 
+@-moz-document domain("gnn.gamer.com.tw") {
+    /*GNN版面配置+格式*/
+    
+    #BH-master {
+        width: 100%;
+        white-space: nowrap;
+        padding-left: 10px;
+    }
+    h4 {
+        display: none;
+    }
+    /*p[style="clear:both;"]{
+        clear: none !important;
+    }*/ .GN-lbox5B {
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 0px;
+        
+        /*追蹤+FB*/
+    } .GN-lbox5A {
+        display: inline;
+        vertical-align: top;
+        text-align: left !important;
+        /*按鈕：作品資料、收藏、哈拉版*/
+    } .GN-lbox5 {
+        display: inline-block;
+        float: left;
+        vertical-align: top;
+        width: 950px;
+        height: 50px;
+        margin: 0;
+        padding: 0px;
+    } .GN-lbox5 a {
+        font-size: 12px;
+        height: 20px;
+        line-height: 20px;
+        padding: 0 3px;
+        color: white !important;
+    } .GN-lbox5A li {
+        float: none;
+        display: inline;
+        margin: 0;
+    } .GN-lbox5A li a {
+        margin-left: 0px;
+        font-family: "微軟正黑體";
+    }
+    
+    .GN-lbox3 {
+        box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+        /*margin-left: 20;*/
+        width: 660px;
+        white-space: normal;
+        margin-left: 0px;
+        display: inline-block;
+        vertical-align: top;
+    } .GN-lbox3 h1 > img { filter: hue-rotate(180deg) saturate(0.7) brightness(0.9)}
+    .GN-lbox3B h2 {
+        color: #43A0FF;
+    }
+    #comment {
+        box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+        margin-left: 7px;
+        position: fixed;
+        display: inline-block;
+        vertical-align: top;
+        width: 275px;
+        max-height: 75%;
+        height: auto;
+
+        overflow-y: scroll !important;
+        border-radius: 10px;
+        border: 10px solid transparent;
+    } .GN-lbox6A {
+        width: 250px;
+        background-color: transparent;
+        padding: 0px;
+        margin: 0px;
+        white-space: normal;
+    } .GN-lbox6A p {
+        float: none;
+        display: inline-block;
+        margin-left: 0px;
+        width: 200px;
+        border-bottom: 1px solid #3E4146;
+        padding-top:5px;
+        padding-bottom: 5px;
+    } .GN-lbox6A p > a {
+        display: block;
+    } .GN-lbox6A span {
+        color: #555E62;
+        float: right;
+        margin-left: 10px;
+        white-space: nowrap;
+    } .GN-lbox6A img {
+        float: none;
+        display: inline-block;
+    } .GN-lbox6A a {
+        color: #FFFFFF !important;
+    } .GN-lbox6B input {
+        width: 250px;
+    } .GN-lbox6B button {
+        margin-top: 5px;
+        display: block;
+        width: 90%;
+        margin-left: 5%;
+        border-radius: 5px;
+    }
+    
+    
+    /*#comment_input:valid + button {
+        visibility: visible;
+    }*/
+}
+
 @-moz-document domain("gc.bahamut.com.tw") {
+    /*使內嵌框架頁同調*/
     body {
         background-color: #36393E;
         font-family: "Noto Sans CJK TC DemiLight", "MS Gothic";
@@ -33,12 +148,10 @@
 
 @-moz-document domain("gamer.com.tw") {
     /*
-
     名稱: 巴哈姆特之夜
     作者: 好冷酒 (hollen9)
-    更新: 2016/02/11
+    更新: 請見頁尾 footer
     始於: 2016/02/06
-
     */
     @keyframes fadeInwithbluring { from { opacity: 0; filter: blur(3px);-webkit-filter: blur(3px);} to { opacity:1; filter: blur(0px); -webkit-filter: blur(0px);} }
     @keyframes PaintColor { from { ;} to { filter: grayscale(0%); -webkit-filter: grayscale(0%);} }
@@ -46,7 +159,7 @@
 
     #BH-footer::after, .BA-footer::after {
         visibility: visible;
-        content: "\A\A NightlyBahamut v0.23\A Created by Hollen9 (好冷酒)\A　";
+        content: "\A\A NightlyBahamut v0.24\A Designed by Hollen9 (好冷酒)\A　";
         white-space: pre;
         cursor: default;
     }
@@ -65,11 +178,14 @@
     
     /*基本共同設定*/
     
-    /*#BH-background {
-        background-image: url("https://raw.githubusercontent.com/hollen9/GamerBahamutThemes/7efb9ed699c746e3a4173b29220fbbc6cfcfae1b/images/tile_blurblack.png");
-        background-color: #1E2124;
-        background-size: 900px 900px;
-    }*/
+    #BH-background {
+        background-image: url("https://vgy.me/l0wGs3.png"); 
+        background-repeat: no-repeat; 
+        background-position: 100% 80%;
+        background-size: 14% auto;
+        background-attachment:fixed;
+        /*User-defined BG*/
+    }
     
     body {
         /*background-image: url("https://raw.githubusercontent.com/hollen9/GamerBahamutThemes/7efb9ed699c746e3a4173b29220fbbc6cfcfae1b/images/tile_blurblack.png");
@@ -82,18 +198,22 @@
         /*overflow-x: hidden;*/
     }
     
-    #BA-main {
+    .BA-main {
         overflow-x: hidden;
     }
     
     a:link, a:visited {
         color: #3BAFFF;
         text-decoration: none;
-        transition: 0.2s ease-out;/*實驗功能*/
+        transition: 0.2s ease-out;/*連結補間動畫*/
     } a:hover {
         color: #A6DBFF;
         text-decoration: underline;
     }
+    
+    .FM-cbox9 a, .TOP-btn a, .BA-top a {
+        transition: none !important;
+    } /*連結補間動畫例外名單*/
     
     input, select, textarea {
         font-family:"Noto Sans CJK TC DemiLight", "MS Gothic", sans-serif;
@@ -638,6 +758,11 @@
         overflow: visible;/*使rearrangement成為可能*/
     }
     
+    .BA-lbox6, .BA-lbox1, .BA-lbox + .BA-ltitle:nth-of-type(3), .BA-lbox + .BA-ltitle:nth-of-type(4) {
+        position: relative !important;
+        top: -2000px !important;
+    }/*簡陋補洞法*/
+    
     /*rearrangement_end*/
     
     /*reorder_start: the numbers of orders are unstable. All of them must be kept up-to-date as Bahamut does.*/
@@ -825,6 +950,7 @@
         background-image: none;
         background-color: #25282C;/*#1E2124;*/
         color: #FFFFF1;
+        
     }
     
     
@@ -1060,7 +1186,6 @@
     #BH-menu-path {
         opacity: 0.5;
     } #BH-menu-path:hover {
-        
         animation:fadeIn cubic-bezier(0,1.02,0,.59) 1;
         animation-fill-mode:forwards;
         animation-duration:0.2s;
@@ -1106,6 +1231,9 @@
 
 
     /* 文章區︵開始*/
+    
+
+    
     
     /* override 內文文字自訂格式_開始 */
     /*.FM-cbox7 font[color="#141823"] {
@@ -1190,7 +1318,7 @@
         background-color: transparent;
     }
     
-    .FM-cbox10 textarea, .FM-reply textarea, .msgright textarea, #msgtalk { /*留言、快速回覆 (包含公會)*/
+    .FM-cbox10 textarea, .FM-reply textarea, .msgright textarea, #msgtalk, #comment_input { /*留言、快速回覆 (包含公會)*/
         /*display: flex;*/
          
         position: relative;
@@ -1199,7 +1327,6 @@
         border: 2px solid #dadddf;
         box-sizing: border-box;
         min-height: 40px !important;
-        height: 80px;
         border-color: hsla(0,0%,100%,.2);
         background-color: hsla(0,0%,100%,.06);
         color: #C6C7C9 !important;
@@ -1211,26 +1338,36 @@
         border-radius: 20px;
         margin-bottom: 10px;
     }
-    
-    .FM-reply > .FM-replyC > a > img, .TOP-my li:nth-child(5) img, .FM-cbox10C img, .FM-rbox14-master img, .msghead, .BH-list4 img, .GU-rbox6 img, .TOP-nologin img {
+    .FM-reply > .FM-replyC > a > img, .TOP-my li:nth-child(5) img, .FM-cbox10C img, .FM-rbox14-master img, .msghead, .BH-list4 img, .GU-rbox6 img, .TOP-nologin img, .GN-lbox6A img {
         box-sizing: border-box;
         -webkit-box-sizing: border-box;
         border-radius: 40px;
-    } /*裁切迷你大頭貼 成圓形的*/
+    } .FM-reply > .FM-replyC > a > img:hover, .TOP-my li:nth-child(5) img:hover, .FM-cbox10C img:hover, .FM-rbox14-master img:hover, .msghead:hover, .BH-list4 img:hover, .GU-rbox6 img:hover, .TOP-nologin img:hover, .GN-lbox6A img:hover {
+        transition: 0.4s ease-out;
+        border-radius: 0px;
+        animation-iteration-count: 1;
+    }/*裁切迷你大頭貼 成圓形的*/
+
     
     div[id^="egg_tip"] {
-        border: none !important;
-        background: none !important;
+        border-radius: 5px;
+        border: 2px solid #646376 !important;
+        background-color: #1E2124 !important;
         box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
-    } a.user-info:hover {
+        animation:fadeIn cubic-bezier(0,1.02,0,.59) 1;
+        animation-fill-mode:forwards;
+        animation-duration:0.8s;
+        animation-delay: 0s;
+    }
+    
+    a.user-info:hover {
         outline: 0;
         color: #FF7777;
     } a.user-info {
         overflow: visible;
-        background-color: #1E2124;
+        background-color: transparent;
+        border: 0;
         color: #BEBAB5;
-        border-radius: 5px;
-        border: 2px solid #646376;
         outline: 0;
     } a.user-info span {
         color: #FFFFFF;
